# OS2025

channel/: CMakeLists.txt  buffered_channel.h  common.h  main_std_thread.cpp
matrix/linux/: CMakeLists.txt  main_pthread.cpp
matrix/pthread/: CMakeLists.txt  common.h  main_std_thread.cpp
matrix/windows/: CMakeLists.txt  main_windows.cpp
my_project/: CMakeLists.txt
my_project/src/: main.cpp
my_project/src/Number/: CMakeLists.txt
my_project/src/Number/include/: Number.h
my_project/src/Number/src/: Number.cpp
my_project/src/Vector/include/: Vector.h
my_project/src/Vector/src/: Vector.cpp
process/linux/: CMakeLists.txt  Killer.cpp  User.cpp
process/windows/: CMakeLists.txt  Killer.cpp  User.cpp
zd1/Linux/my_project/: CMakeLists.txt
zd1/Linux/my_project/src/Number/: CMakeLists.txt
zd1/Linux/my_project/src/Number/include/: Number.h
zd1/Linux/my_project/src/Number/src/: Number.cpp
zd1/Linux/my_project/src/Vector/: CMakeLists.txt
zd1/Linux/my_project/src/Vector/include/: Vector.h
zd1/Windows/my_project/: CMakeLists.txt
zd1/Windows/my_project/src/: main.cpp
zd1/Windows/my_project/src/Vector/include/: Vector.h
